apply plugin: 'com.esri.arcgisruntime.java'buildscript {    repositories {        maven {            url = 'https://esri.bintray.com/arcgis'        }    }    dependencies {        classpath 'com.esri.arcgisruntime:gradle-arcgis-java-plugin:1.0.0'    }}arcgis.version = '100.4.0'// required for the JavaFX dependencies//ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os// compile this project with Java 11 (AdoptOpenJDK 11 Hotspot is expected without any additional settings needed after importing this project into IDE)sourceCompatibility = 1.8version = ""tasks.withType(JavaCompile) { options.encoding = "UTF-8" }sourceSets {    test {        project.ext {            testSrcDir = "src"        }        java.srcDirs = [testSrcDir]    }}dependencies {    //compile against the classes built by java-se-api project    //(in addition to the 'main' section above which should be commented in)    implementation "commons-logging:commons-logging:1.2"    implementation "commons-codec:commons-codec:1.11"    implementation 'com.google.code.gson:gson:2.8.5'//    implementation "org.openjfx:javafx-base:11:$platform"//    implementation "org.openjfx:javafx-graphics:11:$platform"//    implementation "org.openjfx:javafx-controls:11:$platform"//    implementation "org.openjfx:javafx-fxml:11:$platform"//    implementation "org.openjfx:javafx-web:11:$platform"//    implementation "org.openjfx:javafx-swing:11:$platform"    //OR    //compile against the installed jar (remember to comment out the 'main' section above)//    if (osdetector.os == 'windows') then {//        //implementation fileTree(dir: '/Users/john0005 ArcGIS SDKs/JavaSDK100.5.0/arcgis-runtime-sdk-java-100.5.0/libs', include: '*.jar')//    } else {//        // mac or linux//        implementation fileTree(dir: '~/ArcGIS SDKs/arcgis-runtime-sdk-java-100.5.0/libs', include: '*.jar')//    }    //For Mac, remember to replace "user name" with yours    //implementation fileTree(dir: '~/ArcGIS SDKs/arcgis-runtime-sdk-java-100.5.0/libs', include: '*.jar')    testImplementation 'junit:junit:4.12'    testImplementation 'org.jooq:joox:1.5.0'    testImplementation 'GuiffyID:GuiffyID:GuiffyID'    testImplementation 'commons-io:commons-io:2.6' // for FileUtils    compile 'junit:junit:4.12'}//compileJava {//    options.compilerArgs = [//            '--module-path', '/Users/john0005/Downloads/javafx-sdk-11/lib',//            '--add-modules', 'javafx.controls,javafx.fxml,javafx.web,javafx.swing'//    ]//}// This task is intended only to add the gradle wrapper bits to the directory containing this file.// If the gradle wrapper is already there, it will do nothing unless the gradleVersion property is// incremented. Note that if a newer wrapper version adds more files, this task will need to be run// again to add them.// Needs a full gradle install to run initially, run the following:// gradle wrapperwrapper {    gradleVersion = '5.0'}